--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-06 03:04 -->
+<!-- 2022-10-07 03:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org260b632">1. 妙妙文章</a>
+<li><a href="#orga3c9635">1. 妙妙文章</a>
 <ul>
-<li><a href="#org873a2c4">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org23558b6">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgb1752e3">1.3. 关于编辑器</a></li>
-<li><a href="#org3bab402">1.4. 关于代码</a></li>
-<li><a href="#org1768b65">1.5. 关于CPU</a>
+<li><a href="#org728ce23">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgb2ba382">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgcab7a4f">1.3. 关于编辑器</a></li>
+<li><a href="#org1c8a438">1.4. 关于代码</a></li>
+<li><a href="#org83694c3">1.5. 关于CPU</a>
 <ul>
-<li><a href="#org4bcb731">1.5.1. Lisp</a></li>
+<li><a href="#org003924d">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org6df13e5">1.6. 关于算法</a>
+<li><a href="#orgfaa7545">1.6. 关于算法</a>
 <ul>
-<li><a href="#org9243825">1.6.1. 关于随机</a></li>
+<li><a href="#org7ef3fad">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orge6fabb3">1.7. 关于AI</a></li>
-<li><a href="#org75cd320">1.8. 关于软件</a>
+<li><a href="#orgc192a51">1.7. 关于AI</a></li>
+<li><a href="#org9f9ee17">1.8. 关于软件</a>
 <ul>
-<li><a href="#org62b3c77">1.8.1. SQLite</a></li>
+<li><a href="#orgb565674">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org5d46b11">1.9. 关于workflow</a></li>
+<li><a href="#org248aeef">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org9d273b9">2. 棒棒视频</a>
+<li><a href="#org3ec510a">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgffc405e">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org750f64c">2.2. 各种剧</a></li>
-<li><a href="#org8855522">2.3. 电影</a></li>
+<li><a href="#org1acabaf">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgb363c95">2.2. 各种剧</a></li>
+<li><a href="#org97fb3d6">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgf640cad">3. 快乐游戏</a></li>
-<li><a href="#org91339e6">4. 宝藏博主</a></li>
-<li><a href="#orgca0483a">5. 有意思的</a>
+<li><a href="#org4e0f971">3. 快乐游戏</a></li>
+<li><a href="#orgcff17d7">4. 宝藏博主</a></li>
+<li><a href="#org1b472f4">5. 有意思的</a>
 <ul>
-<li><a href="#org1bbc538">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org263bd6a">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgf2c81ab">6. 我想玩的</a></li>
+<li><a href="#org410c4c2">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org260b632" class="outline-2">
-<h2 id="org260b632"><span class="section-number-2">1.</span> <a href="#org260b632">妙妙文章</a></h2>
+<div id="outline-container-orga3c9635" class="outline-2">
+<h2 id="orga3c9635"><span class="section-number-2">1.</span> <a href="#orga3c9635">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org84268af">
+<figure id="org1c657d2">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org873a2c4" class="outline-3">
-<h3 id="org873a2c4"><span class="section-number-3">1.1.</span> <a href="#org873a2c4">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org728ce23" class="outline-3">
+<h3 id="org728ce23"><span class="section-number-3">1.1.</span> <a href="#org728ce23">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org23558b6" class="outline-3">
-<h3 id="org23558b6"><span class="section-number-3">1.2.</span> <a href="#org23558b6">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgb2ba382" class="outline-3">
+<h3 id="orgb2ba382"><span class="section-number-3">1.2.</span> <a href="#orgb2ba382">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgb1752e3" class="outline-3">
-<h3 id="orgb1752e3"><span class="section-number-3">1.3.</span> <a href="#orgb1752e3">关于编辑器</a></h3>
+<div id="outline-container-orgcab7a4f" class="outline-3">
+<h3 id="orgcab7a4f"><span class="section-number-3">1.3.</span> <a href="#orgcab7a4f">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org3bab402" class="outline-3">
-<h3 id="org3bab402"><span class="section-number-3">1.4.</span> <a href="#org3bab402">关于代码</a></h3>
+<div id="outline-container-org1c8a438" class="outline-3">
+<h3 id="org1c8a438"><span class="section-number-3">1.4.</span> <a href="#org1c8a438">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -616,8 +616,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org1768b65" class="outline-3">
-<h3 id="org1768b65"><span class="section-number-3">1.5.</span> <a href="#org1768b65">关于CPU</a></h3>
+<div id="outline-container-org83694c3" class="outline-3">
+<h3 id="org83694c3"><span class="section-number-3">1.5.</span> <a href="#org83694c3">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -631,8 +631,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-org4bcb731" class="outline-4">
-<h4 id="org4bcb731"><span class="section-number-4">1.5.1.</span> <a href="#org4bcb731">Lisp</a></h4>
+<div id="outline-container-org003924d" class="outline-4">
+<h4 id="org003924d"><span class="section-number-4">1.5.1.</span> <a href="#org003924d">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -655,8 +655,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org6df13e5" class="outline-3">
-<h3 id="org6df13e5"><span class="section-number-3">1.6.</span> <a href="#org6df13e5">关于算法</a></h3>
+<div id="outline-container-orgfaa7545" class="outline-3">
+<h3 id="orgfaa7545"><span class="section-number-3">1.6.</span> <a href="#orgfaa7545">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org9243825" class="outline-4">
-<h4 id="org9243825"><span class="section-number-4">1.6.1.</span> <a href="#org9243825">关于随机</a></h4>
+<div id="outline-container-org7ef3fad" class="outline-4">
+<h4 id="org7ef3fad"><span class="section-number-4">1.6.1.</span> <a href="#org7ef3fad">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge6fabb3" class="outline-3">
-<h3 id="orge6fabb3"><span class="section-number-3">1.7.</span> <a href="#orge6fabb3">关于AI</a></h3>
+<div id="outline-container-orgc192a51" class="outline-3">
+<h3 id="orgc192a51"><span class="section-number-3">1.7.</span> <a href="#orgc192a51">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org75cd320" class="outline-3">
-<h3 id="org75cd320"><span class="section-number-3">1.8.</span> <a href="#org75cd320">关于软件</a></h3>
+<div id="outline-container-org9f9ee17" class="outline-3">
+<h3 id="org9f9ee17"><span class="section-number-3">1.8.</span> <a href="#org9f9ee17">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org62b3c77" class="outline-4">
-<h4 id="org62b3c77"><span class="section-number-4">1.8.1.</span> <a href="#org62b3c77">SQLite</a></h4>
+<div id="outline-container-orgb565674" class="outline-4">
+<h4 id="orgb565674"><span class="section-number-4">1.8.1.</span> <a href="#orgb565674">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5d46b11" class="outline-3">
-<h3 id="org5d46b11"><span class="section-number-3">1.9.</span> <a href="#org5d46b11">关于workflow</a></h3>
+<div id="outline-container-org248aeef" class="outline-3">
+<h3 id="org248aeef"><span class="section-number-3">1.9.</span> <a href="#org248aeef">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9d273b9" class="outline-2">
-<h2 id="org9d273b9"><span class="section-number-2">2.</span> <a href="#org9d273b9">棒棒视频</a></h2>
+<div id="outline-container-org3ec510a" class="outline-2">
+<h2 id="org3ec510a"><span class="section-number-2">2.</span> <a href="#org3ec510a">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -810,8 +810,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgffc405e" class="outline-3">
-<h3 id="orgffc405e"><span class="section-number-3">2.1.</span> <a href="#orgffc405e">Veritasium 真理元素</a></h3>
+<div id="outline-container-org1acabaf" class="outline-3">
+<h3 id="org1acabaf"><span class="section-number-3">2.1.</span> <a href="#org1acabaf">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -836,8 +836,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org750f64c" class="outline-3">
-<h3 id="org750f64c"><span class="section-number-3">2.2.</span> <a href="#org750f64c">各种剧</a></h3>
+<div id="outline-container-orgb363c95" class="outline-3">
+<h3 id="orgb363c95"><span class="section-number-3">2.2.</span> <a href="#orgb363c95">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -860,8 +860,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8855522" class="outline-3">
-<h3 id="org8855522"><span class="section-number-3">2.3.</span> <a href="#org8855522">电影</a></h3>
+<div id="outline-container-org97fb3d6" class="outline-3">
+<h3 id="org97fb3d6"><span class="section-number-3">2.3.</span> <a href="#org97fb3d6">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -886,8 +886,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf640cad" class="outline-2">
-<h2 id="orgf640cad"><span class="section-number-2">3.</span> <a href="#orgf640cad">快乐游戏</a></h2>
+<div id="outline-container-org4e0f971" class="outline-2">
+<h2 id="org4e0f971"><span class="section-number-2">3.</span> <a href="#org4e0f971">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -916,8 +916,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org91339e6" class="outline-2">
-<h2 id="org91339e6"><span class="section-number-2">4.</span> <a href="#org91339e6">宝藏博主</a></h2>
+<div id="outline-container-orgcff17d7" class="outline-2">
+<h2 id="orgcff17d7"><span class="section-number-2">4.</span> <a href="#orgcff17d7">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -928,7 +928,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org41ddd5f">
+<figure id="org8650b58">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -936,8 +936,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgca0483a" class="outline-2">
-<h2 id="orgca0483a"><span class="section-number-2">5.</span> <a href="#orgca0483a">有意思的</a></h2>
+<div id="outline-container-org1b472f4" class="outline-2">
+<h2 id="org1b472f4"><span class="section-number-2">5.</span> <a href="#org1b472f4">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -961,8 +961,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org1bbc538" class="outline-3">
-<h3 id="org1bbc538"><span class="section-number-3">5.1.</span> <a href="#org1bbc538">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org263bd6a" class="outline-3">
+<h3 id="org263bd6a"><span class="section-number-3">5.1.</span> <a href="#org263bd6a">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -974,8 +974,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgf2c81ab" class="outline-2">
-<h2 id="orgf2c81ab"><span class="section-number-2">6.</span> <a href="#orgf2c81ab">我想玩的</a></h2>
+<div id="outline-container-org410c4c2" class="outline-2">
+<h2 id="org410c4c2"><span class="section-number-2">6.</span> <a href="#org410c4c2">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -998,7 +998,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-04 20:45</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-06 03:04</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-07 03:03</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
